# global-bans-rust

./: Cargo.toml  Dockerfile
.github/workflows/: rust.yml
src/: main.rs  structs.rs
