[package]
name = "global-bans-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
mongodb = "3.0"
futures = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
flexi_logger = "0.29"
dotenvy = "0.15"

[dependencies.warp]
version = "0.3"
features = ["tls"]

[dependencies.bson]
version = "2.11"
features = ["chrono-0_4"]

[dependencies.tokio]
version = "1.39"
features = ["full"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "json"]
